Prevent long names from breaking layout
Set word-break on .player-summary.

--- a/client/index.css
+++ b/client/index.css
@@ -115,6 +115,7 @@ html {
 .player-summary {
 	cursor: pointer;
 	list-style: none;
+	word-break: break-all;
 }
 
 .details-body {
